# semlocal

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
npm/: bin.js  package.json
npm/cli-darwin-arm64/: package.json
npm/cli-darwin-x64/: package.json
npm/cli-linux-arm64/: package.json
npm/cli-linux-x64/: package.json
npm/cli-win32-arm64/: package.json
npm/cli-win32-x64/: package.json
npm/semlocal/: bin.js  package.json
skills/semlocal/: SKILL.md
src/: cli.rs  embed.rs  lib.rs  main.rs  search.rs  store.rs
