[package]
name = "semlocal"
version = "0.1.0"
edition = "2021"
description = "Local semantic search CLI — write, search, and delete text with vector embeddings, no backend required."
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
fastembed = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
